Bug 877309 - drawImage should copy from default framebuffer, not the currently bound fb. - r=bjacob